--- a/style.css
+++ b/style.css
@@ -84,8 +84,11 @@ section {
 }
 
 .about {
-  background: linear-gradient(#4a9ad346, rgba(74, 153, 211, 0)),
-    linear-gradient(0deg, #FFFFFF, #FFFFFF);
+  /* background: linear-gradient(#4a9ad346, rgba(74, 153, 211, 0)),
+    linear-gradient(0deg, #FFFFFF, #FFFFFF); */
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.7) 0%, rgba(74, 153, 211, 0.5) 100%), url(img/57362298dd089583598b.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   box-shadow: 0px 4px 16px rgba(75, 0, 129, 0.26);
   padding-top: 150px;
 }
@@ -120,7 +123,6 @@ section {
   color: #ffffff;
 }
 
-.services {}
 
 
 
@@ -133,6 +135,7 @@ section {
 .services-list-one {
   position: relative;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -242,6 +245,129 @@ section {
   line-height: 26px;
   text-align: center;
   color: #0F001A;
+}
+
+.filling {
+  background: rgba(74, 153, 211, 0.1);
+}
+
+.filling .section-heading {
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 35px;
+  text-align: center;
+  color: #4A99D3;
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+
+.section-text {
+  font-size: 20px;
+  line-height: 36px;
+  color: #260041;
+  max-width: 600px;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 50px;
+}
+
+.filling-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+}
+
+.filling-card {
+  background: #ffffff;
+  border-radius: 10px;
+  padding: 35px;
+  color: #0F001A;
+}
+
+.filling-card-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0.02em;
+  color: #0F001A;
+  margin-bottom: 16px;
+  text-align: center;
+}
+
+.design {
+  background: radial-gradient(circle, rgba(74, 153, 211, 0.5) 0%, rgba(74, 153, 211, 0.5) 100%), url(img/pictures_1920x1200_2010_Photoshop_Blue_background_025242_.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.design .section-heading {
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 46px;
+  letter-spacing: 0.5px;
+  color: #ffffff;
+  margin-bottom: 50px;
+}
+
+.design-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+}
+
+.design-card {
+  background: #ffffff;
+  border-radius: 10px;
+  padding: 35px;
+  color: #0F001A;
+}
+
+.design-card-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0.02em;
+  color: #4A99D3;
+  margin-bottom: 16px;
+  text-align: center;
+}
+
+.results {
+  background: rgba(74, 153, 211, 0.1);
+}
+
+.results .section-heading {
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 27px;
+  text-align: center;
+  color: #4A99D3;
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+
+.results-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+}
+
+.results-card {
+  background: #ffffff;
+  border-radius: 10px;
+  padding: 35px;
+  color: #0F001A;
+}
+
+.results-card-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0.02em;
+  color: #0F001A;
+  margin-bottom: 16px;
+  text-align: center;
 }
 
 .prices {
@@ -479,4 +605,65 @@ section {
   display: flex;
   align-items: center;
   color: #FFFFFF;
+}
+
+/* design */
+.biz-brand .section-heading {
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 27px;
+  text-align: center;
+  color: #4A99D3;
+  margin-top: 0;
+  margin-bottom: 50px;
+}
+
+.biz-brand-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+}
+
+.biz-brand-card {
+  background: #FFFFFF;
+  box-shadow: 5px 20px 50px rgba(74, 153, 211, 0.2);
+  border-radius: 10px;
+  padding: 45px;
+  max-width: 380px;
+}
+
+.biz-brand-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0.02em;
+  color: #0F001A;
+  margin-bottom: 16px;
+}
+
+.naming-heading {
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 35px;
+  text-align: center;
+  color: #0F001A;
+  margin-top: 0;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.naming-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+}
+
+.naming-card {
+  box-shadow: 5px 20px 50px rgb(74 153 211 / 20%);
+  border-radius: 10px;
+  padding: 50px;
+}
+.naming-title {
+  
 }
